// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markdown-to-jsx compiler #190 perf regression 1`] = `

<span data-reactroot>
  Lorum
  <em>
    ipsum
  </em>
  :
  <a href
     style="float: right;"
  >
    <small>
      foo
    </small>
  </a>
  <span style="float: right;">
    <small>
      &amp;nbsp;
    </small>
  </span>
  <a href
     style="float: right;"
  >
    <small>
      bar
    </small>
  </a>
</span>

`;

exports[`markdown-to-jsx compiler GFM tables should handle a basic table 1`] = `

<table data-reactroot>
  <thead>
    <tr>
      <th scope="col">
        foo
      </th>
      <th scope="col">
        bar
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1
      </td>
      <td>
        2
      </td>
    </tr>
  </tbody>
</table>

`;

exports[`markdown-to-jsx compiler GFM tables should handle a table with aligned columns 1`] = `

<table data-reactroot>
  <thead>
    <tr>
      <th scope="col"
          style="text-align: right;"
      >
        foo
      </th>
      <th scope="col"
          style="text-align: center;"
      >
        bar
      </th>
      <th scope="col"
          style="text-align: left;"
      >
        baz
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td style="text-align: right;">
        1
      </td>
      <td style="text-align: center;">
        2
      </td>
      <td style="text-align: left;">
        3
      </td>
    </tr>
  </tbody>
</table>

`;

exports[`markdown-to-jsx compiler GFM tables should handle other content after a table 1`] = `

<div data-reactroot>
  <table>
    <thead>
      <tr>
        <th scope="col"
            style="text-align: right;"
        >
          Foo
        </th>
        <th scope="col"
            style="text-align: center;"
        >
          Bar
        </th>
        <th scope="col"
            style="text-align: left;"
        >
          Baz
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td style="text-align: right;">
          1
        </td>
        <td style="text-align: center;">
          2
        </td>
        <td style="text-align: left;">
          3
        </td>
      </tr>
      <tr>
        <td style="text-align: right;">
          4
        </td>
        <td style="text-align: center;">
          5
        </td>
        <td style="text-align: left;">
          6
        </td>
      </tr>
    </tbody>
  </table>
  <p>
    Foo
  </p>
</div>

`;

exports[`markdown-to-jsx compiler GFM tables should handle the other syntax for tables 1`] = `

<table data-reactroot>
  <thead>
    <tr>
      <th scope="col">
        Foo
      </th>
      <th scope="col">
        Bar
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1
      </td>
      <td>
        2
      </td>
    </tr>
    <tr>
      <td>
        3
      </td>
      <td>
        4
      </td>
    </tr>
  </tbody>
</table>

`;

exports[`markdown-to-jsx compiler GFM tables should handle the other syntax for tables with alignment 1`] = `

<table data-reactroot>
  <thead>
    <tr>
      <th scope="col"
          style="text-align: right;"
      >
        Foo
      </th>
      <th scope="col"
          style="text-align: center;"
      >
        Bar
      </th>
      <th scope="col"
          style="text-align: left;"
      >
        Baz
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td style="text-align: right;">
        1
      </td>
      <td style="text-align: center;">
        2
      </td>
      <td style="text-align: left;">
        3
      </td>
    </tr>
    <tr>
      <td style="text-align: right;">
        4
      </td>
      <td style="text-align: center;">
        5
      </td>
      <td style="text-align: left;">
        6
      </td>
    </tr>
  </tbody>
</table>

`;

exports[`markdown-to-jsx compiler GFM task lists should handle checked items 1`] = `

<ul data-reactroot>
  <li>
    <input type="checkbox"
           readonly
           value="on"
    >
    foo
  </li>
</ul>

`;

exports[`markdown-to-jsx compiler GFM task lists should handle unchecked items 1`] = `

<ul data-reactroot>
  <li>
    <input type="checkbox"
           readonly
           value="on"
    >
    foo
  </li>
</ul>

`;

exports[`markdown-to-jsx compiler arbitrary HTML #140 self-closing HTML with indentation 1`] = `

<div data-reactroot
     class="datepicker"
>
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML #180 handles invalid character error with angle brackets 1`] = `

<span data-reactroot>
  1&lt;2 or 2&gt;1
</span>

`;

exports[`markdown-to-jsx compiler arbitrary HTML #181 handling of figure blocks 1`] = `

<figure data-reactroot>
  <img src="//placehold.it/300x200">
  <figcaption>
    This is a placeholder image
  </figcaption>
</figure>

`;

exports[`markdown-to-jsx compiler arbitrary HTML #185 handles block syntax MD + HTML inside HTML 1`] = `

<details data-reactroot>
  <summary>
    Solution
  </summary>
  <pre>
    <code class="lang-jsx">
      import styled from 'styled-components';
    </code>
  </pre>
</details>

`;

exports[`markdown-to-jsx compiler arbitrary HTML #185 misc regression test 1`] = `

<details data-reactroot>
  <summary>
    View collapsed content
  </summary>
  <h1 id="title-h1">
    Title h1
  </h1>
  <h2 id="title-h2">
    Title h2
  </h2>
  <p>
    Text content
  </p>
  <ul>
    <li>
      list 1
    </li>
    <li>
      list 2
    </li>
    <li>
      list 3
    </li>
  </ul>
</details>

`;

exports[`markdown-to-jsx compiler arbitrary HTML #207 handles tables inside HTML 1`] = `

<details data-reactroot>
  <summary>
    Click here
  </summary>
  <table>
    <thead>
      <tr>
        <th scope="col">
          Heading 1
        </th>
        <th scope="col">
          Heading 2
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Foo
        </td>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </table>
</details>

`;

exports[`markdown-to-jsx compiler arbitrary HTML #214 nested paragraphs work inside html 1`] = `

<div data-reactroot>
  <p>
    Hello
  </p>
  <p>
    World
  </p>
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML allows whitespace between attribute and value 1`] = `

<div data-reactroot
     class="foo"
     id="baz"
     style="background: red;"
>
  Bar
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML block HTML regression test 1`] = `

<ul data-reactroot
    id="ProjectSubmenu"
>
  <li>
    <a href="/projects/markdown/"
       title="Markdown Project Page"
    >
      Main
    </a>
  </li>
  <li>
    <a href="/projects/markdown/basics"
       title="Markdown Basics"
    >
      Basics
    </a>
  </li>
  <li>
    <a class="selected"
       title="Markdown Syntax Documentation"
    >
      Syntax
    </a>
  </li>
  <li>
    <a href="/projects/markdown/license"
       title="Pricing and License Information"
    >
      License
    </a>
  </li>
  <li>
    <a href="/projects/markdown/dingus"
       title="Online Markdown Web Form"
    >
      Dingus
    </a>
  </li>
</ul>

`;

exports[`markdown-to-jsx compiler arbitrary HTML does not parse the inside of <script> blocks 1`] = `

<script data-reactroot>
  new Date();
</script>

`;

exports[`markdown-to-jsx compiler arbitrary HTML does not parse the inside of <style> blocks 1`] = `

<style data-reactroot>
  .bar {
    color: red;
  }
</style>

`;

exports[`markdown-to-jsx compiler arbitrary HTML handles a heading inside HTML 1`] = `

<span data-reactroot>
  "
  <span>
    <h1 id="foo">
      foo
    </h1>
  </span>
  "
</span>

`;

exports[`markdown-to-jsx compiler arbitrary HTML handles a raw hashtag inside HTML 1`] = `

<span data-reactroot>
  "
  <span>
    #
  </span>
  "
</span>

`;

exports[`markdown-to-jsx compiler arbitrary HTML handles jsx attribute interpolation as a string 1`] = `

<div data-reactroot>
  1514579720511
  to
  "1514579720512"
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML handles jsx inside jsx interpolations 1`] = `

<div data-reactroot>
  <div class="inner">
    bah
  </div>
  and
  <div class="inner">
    blah
  </div>
  and
  <div disabled
       class="inner"
  >
  </div>
  and
  <div class="inner">
  </div>
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML handles malformed HTML 1`] = `

<div data-reactroot>
  <g>
  </g>
  <g>
    <path fill="#ffffff">
    </path>
  </g>
  <path fill="#ffffff">
  </path>
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML handles nested HTML blocks of the same type (regression) 1`] = `

<table data-reactroot>
  <tbody>
    <tr>
      <td>
        Time
      </td>
      <td>
        Payment Criteria
      </td>
      <td>
        Payment
      </td>
    </tr>
    <tr>
      <td>
        Office Visit
      </td>
      <td>
        <ul>
          <li>
            Complete full visit and enroll
            <ul>
              <li>
                Enrolling is fun!
              </li>
            </ul>
          </li>
        </ul>
      </td>
      <td>
        $20
      </td>
    </tr>
  </tbody>
</table>

`;

exports[`markdown-to-jsx compiler arbitrary HTML handles nested tags of the same type with attributes 1`] = `

<div data-reactroot
     id="foo"
>
  <div id="bar">
    Baz
  </div>
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML handles self-closing html inside parsable html (regression) 1`] = `

<a data-reactroot
   href="https://opencollective.com/react-dropzone/sponsor/0/website"
   target="_blank"
>
  <img src="https://opencollective.com/react-dropzone/sponsor/0/avatar.svg">
</a>

`;

exports[`markdown-to-jsx compiler arbitrary HTML handles svg 1`] = `

<svg data-reactroot
     width="246"
     height="369"
     xmlns="http://www.w3.org/2000/svg"
>
  <path d="M243.937.055a2 2 0 0 1 2.008 2.002v168.995c0 1.106-.814 2.388-1.802 2.855l-118.895 56.186c-.996.47-2.617.467-3.605 0L2.748 173.907c-.996-.47-1.803-1.742-1.803-2.855V2.057C.945.951 1.832.055 2.953.055h240.984zM110.391 139.367V66.383l-25.032 47.32h-9.843l-24.891-47.32v72.984h-15.68V42.055h20.18l25.594 49.64 25.804-49.64h19.688v97.312h-15.82zm104.101-48.656c0 9.562-.984 17.484-2.953 23.766-1.969 6.28-4.91 11.261-8.824 14.941-3.914 3.68-8.754 6.258-14.52 7.734-5.765 1.477-12.445 2.215-20.039 2.215h-27.21V42.055h26.929c7.781 0 14.59.82 20.426 2.46 5.836 1.641 10.699 4.36 14.59 8.157 3.89 3.797 6.796 8.8 8.718 15.012 1.922 6.21 2.883 13.886 2.883 23.027zm-18.289-16.508c-1.031-4.312-2.742-7.746-5.133-10.3-2.39-2.555-5.554-4.348-9.492-5.38-3.937-1.03-8.812-1.546-14.625-1.546h-9.21v67.359h9.21c5.906 0 10.828-.55 14.766-1.652 3.937-1.102 7.101-2.954 9.492-5.555 2.39-2.602 4.078-6.07 5.062-10.406.985-4.336 1.477-9.739 1.477-16.207 0-6.563-.516-12-1.547-16.313zM51.219 339.805c0 4.922-.574 9.187-1.723 12.797-1.148 3.609-2.93 6.597-5.344 8.964-2.414 2.368-5.507 4.114-9.28 5.239-3.774 1.125-8.263 1.687-13.466 1.687-1.265 0-2.718-.082-4.36-.246a60.81 60.81 0 0 1-5.097-.738 80.327 80.327 0 0 1-5.238-1.16A49.492 49.492 0 0 1 2 364.906l5.484-14.414c.704.375 1.653.762 2.848 1.16 1.195.399 2.45.762 3.762 1.09a56.72 56.72 0 0 0 3.972.844c1.336.234 2.496.351 3.48.351 2.673 0 4.864-.316 6.575-.949 1.711-.633 3.07-1.699 4.078-3.199 1.008-1.5 1.7-3.492 2.074-5.976.375-2.485.563-5.602.563-9.352V269h16.383v70.805zM151.688 339c0 5.484-.973 10.09-2.918 13.816-1.946 3.727-4.582 6.75-7.91 9.07-3.329 2.321-7.208 3.985-11.637 4.993-4.43 1.008-9.13 1.512-14.098 1.512-5.25 0-9.844-.493-13.781-1.477-3.938-.984-7.383-2.32-10.336-4.008-2.953-1.687-5.473-3.656-7.559-5.906A43.715 43.715 0 0 1 78 349.758l12.938-9.352a42.058 42.058 0 0 0 3.902 5.168 23.723 23.723 0 0 0 4.992 4.254c1.898 1.219 4.113 2.192 6.645 2.918 2.53.727 5.46 1.09 8.789 1.09 2.484 0 4.91-.234 7.277-.703s4.465-1.242 6.293-2.32c1.828-1.079 3.293-2.485 4.394-4.22 1.102-1.734 1.653-3.89 1.653-6.468 0-2.438-.528-4.477-1.582-6.117-1.055-1.64-2.473-3.024-4.254-4.149-1.781-1.125-3.867-2.062-6.258-2.812-2.39-.75-4.945-1.477-7.664-2.18a266.328 266.328 0 0 1-13.852-3.902c-4.265-1.336-7.968-3.035-11.109-5.098-3.14-2.062-5.613-4.687-7.418-7.875-1.805-3.187-2.707-7.265-2.707-12.234 0-4.406.75-8.38 2.25-11.918a24.403 24.403 0 0 1 6.61-9.07c2.906-2.508 6.527-4.43 10.863-5.766 4.336-1.336 9.316-2.004 14.941-2.004 4.219 0 8.074.387 11.567 1.16 3.492.774 6.656 1.899 9.492 3.375a32.403 32.403 0 0 1 7.629 5.485 37.377 37.377 0 0 1 5.906 7.418l-12.727 9.492c-2.578-4.125-5.625-7.22-9.14-9.282-3.516-2.062-7.805-3.093-12.868-3.093-5.484 0-9.832 1.125-13.042 3.375-3.211 2.25-4.817 5.437-4.817 9.562 0 2.063.434 3.785 1.3 5.168.868 1.383 2.204 2.59 4.009 3.621 1.804 1.032 4.078 1.957 6.82 2.778 2.742.82 5.988 1.675 9.738 2.566a193.01 193.01 0 0 1 8.473 2.25 67.888 67.888 0 0 1 7.805 2.777 38.465 38.465 0 0 1 6.785 3.727 22.237 22.237 0 0 1 5.308 5.168c1.477 2.016 2.637 4.371 3.48 7.066.845 2.696 1.267 5.824 1.267 9.387zM164 367.313l31.992-48.797L164.844 270h18.914l21.586 35.648L227.633 270h18.281l-31.5 48.094 31.36 49.219H227.07l-22.289-36.282-22.64 36.281z"
        fill="#444"
        fill-rule="evenodd"
  >
  </path>
</svg>

`;

exports[`markdown-to-jsx compiler arbitrary HTML multiline left-trims by the same amount as the first line 1`] = `

<div data-reactroot>
  <pre>
    <code class="lang-kotlin">
      fun main() {
    print("Hello world")
}
    </code>
  </pre>
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML nested lists work inside html 1`] = `

<div data-reactroot>
  <ul>
    <li>
      hi
    </li>
    <li>
      hello
      <ul>
        <li>
          how are you?
        </li>
      </ul>
    </li>
  </ul>
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML preserves the HTML given 1`] = `

<dd data-reactroot>
  Hello
</dd>

`;

exports[`markdown-to-jsx compiler arbitrary HTML processes attributes that need JSX massaging within inline HTML 1`] = `

<span data-reactroot
      tabindex="0"
>
  Hello
</span>

`;

exports[`markdown-to-jsx compiler arbitrary HTML processes attributes within inline HTML 1`] = `

<time data-reactroot
      data-foo="bar"
>
  Hello
</time>

`;

exports[`markdown-to-jsx compiler arbitrary HTML processes inline HTML with inline styles 1`] = `

<span data-reactroot
      style="color: red; position: top; margin-right: 10px;"
>
  Hello
</span>

`;

exports[`markdown-to-jsx compiler arbitrary HTML processes markdown within block-level arbitrary HTML (regression) 1`] = `

<div data-reactroot
     style="float: right;"
>
  <h1 id="hello">
    Hello
  </h1>
</div>

`;

exports[`markdown-to-jsx compiler arbitrary HTML processes markdown within block-level arbitrary HTML 1`] = `

<p data-reactroot>
  <strong>
    Hello
  </strong>
</p>

`;

exports[`markdown-to-jsx compiler arbitrary HTML processes markdown within inline HTML 1`] = `

<time data-reactroot>
  <strong>
    Hello
  </strong>
</time>

`;

exports[`markdown-to-jsx compiler arbitrary HTML processes markdown within nested inline HTML 1`] = `

<time data-reactroot>
  <span>
    <strong>
      Hello
    </strong>
  </span>
</time>

`;

exports[`markdown-to-jsx compiler arbitrary HTML processes markdown within nested inline HTML where childen appear more than once 1`] = `

<dl data-reactroot>
  <dt>
    foo
  </dt>
  <dd>
    bar
  </dd>
  <dt>
    baz
  </dt>
  <dd>
    qux
  </dd>
</dl>

`;

exports[`markdown-to-jsx compiler arbitrary HTML regression test for #136 1`] = `

<p data-reactroot>
  $25
  <br>
  <br>
  <br>
  $50
  <br>
  <br>
  <br>
  $50
  <br>
  <br>
  <br>
  $50
  <br>
  <br>
  <br>
</p>

`;

exports[`markdown-to-jsx compiler arbitrary HTML regression test for #170 1`] = `

<table data-reactroot>
  <tbody>
    <tr>
      <td>
        a
      </td>
      <td>
        b
      </td>
      <td>
        c
      </td>
    </tr>
    <tr>
      <td>
        left
      </td>
      <td>
        <p>
          Start of table
        </p>
        <ul>
          <li>
            List 1
          </li>
          <li>
            <ul>
              <li>
                Nested List 1
              </li>
            </ul>
          </li>
          <li>
            <ul>
              <li>
                list 2
              </li>
            </ul>
          </li>
        </ul>
      </td>
      <td>
        right
      </td>
    </tr>
  </tbody>
</table>

`;

exports[`markdown-to-jsx compiler arbitrary HTML renders inline <code> tags 1`] = `

<span data-reactroot>
  Text and
  <code>
    <strong>
      code
    </strong>
  </code>
</span>

`;

exports[`markdown-to-jsx compiler arbitrary HTML throws out HTML comments 1`] = `

<p data-reactroot>
  Foo
</p>

`;

exports[`markdown-to-jsx compiler fenced code blocks should be handled 1`] = `

<pre data-reactroot>
  <code class="lang-js">
    foo
  </code>
</pre>

`;

exports[`markdown-to-jsx compiler footnotes should handle conversion of references into links 1`] = `

<div data-reactroot>
  <p>
    foo
    <a href="#abc">
      <sup>
        abc
      </sup>
    </a>
    bar
  </p>
  <footer>
    <div id="abc">
      abc
      : Baz baz
    </div>
  </footer>
</div>

`;

exports[`markdown-to-jsx compiler footnotes should handle single word footnote definitions 1`] = `

<div data-reactroot>
  <p>
    foo
    <a href="#abc">
      <sup>
        abc
      </sup>
    </a>
    bar
  </p>
  <footer>
    <div id="abc">
      abc
      : Baz
    </div>
  </footer>
</div>

`;

exports[`markdown-to-jsx compiler footnotes should inject the definitions in a footer at the end of the root 1`] = `

<div data-reactroot>
  <p>
    foo
    <a href="#abc">
      <sup>
        abc
      </sup>
    </a>
    bar
  </p>
  <footer>
    <div id="abc">
      abc
      : Baz baz
    </div>
  </footer>
</div>

`;

exports[`markdown-to-jsx compiler handles a holistic example 1`] = `

<div data-reactroot>
  <h1>
    Markdown: Syntax
  </h1>
  <ul id="ProjectSubmenu">
    <li>
      <a href="/projects/markdown/"
         title="Markdown Project Page"
      >
        Main
      </a>
    </li>
    <li>
      <a href="/projects/markdown/basics"
         title="Markdown Basics"
      >
        Basics
      </a>
    </li>
    <li>
      <a class="selected"
         title="Markdown Syntax Documentation"
      >
        Syntax
      </a>
    </li>
    <li>
      <a href="/projects/markdown/license"
         title="Pricing and License Information"
      >
        License
      </a>
    </li>
    <li>
      <a href="/projects/markdown/dingus"
         title="Online Markdown Web Form"
      >
        Dingus
      </a>
    </li>
  </ul>
  <ul>
    <li>
      <a href="#overview">
        Overview
      </a>
      <ul>
        <li>
          <a href="#philosophy">
            Philosophy
          </a>
        </li>
        <li>
          <a href="#html">
            Inline HTML
          </a>
        </li>
        <li>
          <a href="#autoescape">
            Automatic Escaping for Special Characters
          </a>
        </li>
      </ul>
    </li>
    <li>
      <a href="#block">
        Block Elements
      </a>
      <ul>
        <li>
          <a href="#p">
            Paragraphs and Line Breaks
          </a>
        </li>
        <li>
          <a href="#header">
            Headers
          </a>
        </li>
        <li>
          <a href="#blockquote">
            Blockquotes
          </a>
        </li>
        <li>
          <a href="#list">
            Lists
          </a>
        </li>
        <li>
          <a href="#precode">
            Code Blocks
          </a>
        </li>
        <li>
          <a href="#hr">
            Horizontal Rules
          </a>
        </li>
      </ul>
    </li>
    <li>
      <a href="#span">
        Span Elements
      </a>
      <ul>
        <li>
          <a href="#link">
            Links
          </a>
        </li>
        <li>
          <a href="#em">
            Emphasis
          </a>
        </li>
        <li>
          <a href="#code">
            Code
          </a>
        </li>
        <li>
          <a href="#img">
            Images
          </a>
        </li>
      </ul>
    </li>
    <li>
      <a href="#misc">
        Miscellaneous
      </a>
      <ul>
        <li>
          <a href="#backslash">
            Backslash Escapes
          </a>
        </li>
        <li>
          <a href="#autolink">
            Automatic Links
          </a>
        </li>
      </ul>
    </li>
  </ul>
  <p>
    <strong>
      Note:
    </strong>
    This document is itself written using Markdown; you
can
    <a href="/projects/markdown/syntax.text">
      see the source for it by adding '.text' to the URL
    </a>
    .
  </p>
  <p>
  </p>
  <hr>
  <h2 id="overview">
    Overview
  </h2>
  <h3 id="philosophy">
    Philosophy
  </h3>
  <p>
    Markdown is intended to be as easy-to-read and easy-to-write as is feasible.
  </p>
  <p>
    Readability, however, is emphasized above all else. A Markdown-formatted
document should be publishable as-is, as plain text, without looking
like it's been marked up with tags or formatting instructions. While
Markdown's syntax has been influenced by several existing text-to-HTML
filters -- including
    <a href="http://docutils.sourceforge.net/mirror/setext.html">
      Setext
    </a>
    ,
    <a href="http://www.aaronsw.com/2002/atx/">
      atx
    </a>
    ,
    <a href="http://textism.com/tools/textile/">
      Textile
    </a>
    ,
    <a href="http://docutils.sourceforge.net/rst.html">
      reStructuredText
    </a>
    ,
    <a href="http://www.triptico.com/software/grutatxt.html">
      Grutatext
    </a>
    , and
    <a href="http://ettext.taint.org/doc/">
      EtText
    </a>
    -- the single biggest source of
inspiration for Markdown's syntax is the format of plain text email.
  </p>
  <p>
  </p>
  <p>
    To this end, Markdown's syntax is comprised entirely of punctuation
characters, which punctuation characters have been carefully chosen so
as to look like what they mean. E.g., asterisks around a word actually
look like *emphasis*. Markdown lists look like, well, lists. Even
blockquotes look like quoted passages of text, assuming you've ever
used email.
  </p>
  <h3 id="html">
    Inline HTML
  </h3>
  <p>
    Markdown's syntax is intended for one purpose: to be used as a
format for
    <em>
      writing
    </em>
    for the web.
  </p>
  <p>
    Markdown is not a replacement for HTML, or even close to it. Its
syntax is very small, corresponding only to a very small subset of
HTML tags. The idea is
    <em>
      not
    </em>
    to create a syntax that makes it easier
to insert HTML tags. In my opinion, HTML tags are already easy to
insert. The idea for Markdown is to make it easy to read, write, and
edit prose. HTML is a
    <em>
      publishing
    </em>
    format; Markdown is a
    <em>
      writing
    </em>
    format. Thus, Markdown's formatting syntax only addresses issues that
can be conveyed in plain text.
  </p>
  <p>
    For any markup that is not covered by Markdown's syntax, you simply
use HTML itself. There's no need to preface it or delimit it to
indicate that you're switching from Markdown to HTML; you just use
the tags.
  </p>
  <p>
    The only restrictions are that block-level HTML elements -- e.g.
    <code>
      &lt;div&gt;
    </code>
    ,
    <code>
      &lt;table&gt;
    </code>
    ,
    <code>
      &lt;pre&gt;
    </code>
    ,
    <code>
      &lt;p&gt;
    </code>
    , etc. -- must be separated from surrounding
content by blank lines, and the start and end tags of the block should
not be indented with tabs or spaces. Markdown is smart enough not
to add extra (unwanted)
    <code>
      &lt;p&gt;
    </code>
    tags around HTML block-level tags.
  </p>
  <p>
    For example, to add an HTML table to a Markdown article:
  </p>
  <pre>
    <code>
      This is a regular paragraph.

&lt;table&gt;
    &lt;tr&gt;
        &lt;td&gt;Foo&lt;/td&gt;
    &lt;/tr&gt;
&lt;/table&gt;

This is another regular paragraph.
    </code>
  </pre>
  <p>
    Note that Markdown formatting syntax is not processed within block-level
HTML tags. E.g., you can't use Markdown-style
    <code>
      *emphasis*
    </code>
    inside an
HTML block.
  </p>
  <p>
    Span-level HTML tags -- e.g.
    <code>
      &lt;span&gt;
    </code>
    ,
    <code>
      &lt;cite&gt;
    </code>
    , or
    <code>
      &lt;del&gt;
    </code>
    -- can be
used anywhere in a Markdown paragraph, list item, or header. If you
want, you can even use HTML tags instead of Markdown formatting; e.g. if
you'd prefer to use HTML
    <code>
      &lt;a&gt;
    </code>
    or
    <code>
      &lt;img&gt;
    </code>
    tags instead of Markdown's
link or image syntax, go right ahead.
  </p>
  <p>
    Unlike block-level HTML tags, Markdown syntax
    <em>
      is
    </em>
    processed within
span-level tags.
  </p>
  <h3 id="autoescape">
    Automatic Escaping for Special Characters
  </h3>
  <p>
    In HTML, there are two characters that demand special treatment:
    <code>
      &lt;
    </code>
    and
    <code>
      &amp;
    </code>
    . Left angle brackets are used to start tags; ampersands are
used to denote HTML entities. If you want to use them as literal
characters, you must escape them as entities, e.g.
    <code>
      &amp;lt;
    </code>
    , and
    <code>
      &amp;amp;
    </code>
    .
  </p>
  <p>
    Ampersands in particular are bedeviling for web writers. If you want to
write about 'AT&amp;T', you need to write '
    <code>
      AT&amp;amp;T
    </code>
    '. You even need to
escape ampersands within URLs. Thus, if you want to link to:
  </p>
  <pre>
    <code>
      http://images.google.com/images?num=30&amp;q=larry+bird
    </code>
  </pre>
  <p>
    you need to encode the URL as:
  </p>
  <pre>
    <code>
      http://images.google.com/images?num=30&amp;amp;q=larry+bird
    </code>
  </pre>
  <p>
    in your anchor tag
    <code>
      href
    </code>
    attribute. Needless to say, this is easy to
forget, and is probably the single most common source of HTML validation
errors in otherwise well-marked-up web sites.
  </p>
  <p>
    Markdown allows you to use these characters naturally, taking care of
all the necessary escaping for you. If you use an ampersand as part of
an HTML entity, it remains unchanged; otherwise it will be translated
into
    <code>
      &amp;amp;
    </code>
    .
  </p>
  <p>
    So, if you want to include a copyright symbol in your article, you can write:
  </p>
  <pre>
    <code>
      &amp;copy;
    </code>
  </pre>
  <p>
    and Markdown will leave it alone. But if you write:
  </p>
  <pre>
    <code>
      AT&amp;T
    </code>
  </pre>
  <p>
    Markdown will translate it to:
  </p>
  <pre>
    <code>
      AT&amp;amp;T
    </code>
  </pre>
  <p>
    Similarly, because Markdown supports
    <a href="#html">
      inline HTML
    </a>
    , if you use
angle brackets as delimiters for HTML tags, Markdown will treat them as
such. But if you write:
  </p>
  <pre>
    <code>
      4 &lt; 5
    </code>
  </pre>
  <p>
    Markdown will translate it to:
  </p>
  <pre>
    <code>
      4 &amp;lt; 5
    </code>
  </pre>
  <p>
    However, inside Markdown code spans and blocks, angle brackets and
ampersands are
    <em>
      always
    </em>
    encoded automatically. This makes it easy to use
Markdown to write about HTML code. (As opposed to raw HTML, which is a
terrible format for writing about HTML syntax, because every single
    <code>
      &lt;
    </code>
    and
    <code>
      &amp;
    </code>
    in your example code needs to be escaped.)
  </p>
  <hr>
  <h2 id="block">
    Block Elements
  </h2>
  <h3 id="p">
    Paragraphs and Line Breaks
  </h3>
  <p>
    A paragraph is simply one or more consecutive lines of text, separated
by one or more blank lines. (A blank line is any line that looks like a
blank line -- a line containing nothing but spaces or tabs is considered
blank.) Normal paragraphs should not be indented with spaces or tabs.
  </p>
  <p>
    The implication of the "one or more consecutive lines of text" rule is
that Markdown supports "hard-wrapped" text paragraphs. This differs
significantly from most other text-to-HTML formatters (including Movable
Type's "Convert Line Breaks" option) which translate every line break
character in a paragraph into a
    <code>
      &lt;br /&gt;
    </code>
    tag.
  </p>
  <p>
    When you
    <em>
      do
    </em>
    want to insert a
    <code>
      &lt;br /&gt;
    </code>
    break tag using Markdown, you
end a line with two or more spaces, then type return.
  </p>
  <p>
    Yes, this takes a tad more effort to create a
    <code>
      &lt;br /&gt;
    </code>
    , but a simplistic
"every line break is a
    <code>
      &lt;br /&gt;
    </code>
    " rule wouldn't work for Markdown.
Markdown's email-style
    <a href="#blockquote">
      blockquoting
    </a>
    and multi-paragraph
    <a href="#list">
      list items
    </a>
    work best -- and look better -- when you format them with hard breaks.
  </p>
  <p>
  </p>
  <h3 id="header">
    Headers
  </h3>
  <p>
    Markdown supports two styles of headers,
    <a href="http://docutils.sourceforge.net/mirror/setext.html">
      Setext
    </a>
    and
    <a href="http://www.aaronsw.com/2002/atx/">
      atx
    </a>
    .
  </p>
  <p>
    Setext-style headers are "underlined" using equal signs (for first-level
headers) and dashes (for second-level headers). For example:
  </p>
  <pre>
    <code>
      This is an H1
=============

This is an H2
-------------
    </code>
  </pre>
  <p>
    Any number of underlining
    <code>
      =
    </code>
    's or
    <code>
      -
    </code>
    's will work.
  </p>
  <p>
    Atx-style headers use 1-6 hash characters at the start of the line,
corresponding to header levels 1-6. For example:
  </p>
  <pre>
    <code>
      # This is an H1

## This is an H2

###### This is an H6
    </code>
  </pre>
  <p>
    Optionally, you may "close" atx-style headers. This is purely
cosmetic -- you can use this if you think it looks better. The
closing hashes don't even need to match the number of hashes
used to open the header. (The number of opening hashes
determines the header level.) :
  </p>
  <pre>
    <code>
      # This is an H1 #

## This is an H2 ##

### This is an H3 ######
    </code>
  </pre>
  <h3 id="blockquote">
    Blockquotes
  </h3>
  <p>
    Markdown uses email-style
    <code>
      &gt;
    </code>
    characters for blockquoting. If you're
familiar with quoting passages of text in an email message, then you
know how to create a blockquote in Markdown. It looks best if you hard
wrap the text and put a
    <code>
      &gt;
    </code>
    before every line:
  </p>
  <pre>
    <code>
      &gt; This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet,
&gt; consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus.
&gt; Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.
&gt;
&gt; Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse
&gt; id sem consectetuer libero luctus adipiscing.
    </code>
  </pre>
  <p>
    Markdown allows you to be lazy and only put the
    <code>
      &gt;
    </code>
    before the first
line of a hard-wrapped paragraph:
  </p>
  <pre>
    <code>
      &gt; This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet,
consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus.
Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.

&gt; Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse
id sem consectetuer libero luctus adipiscing.
    </code>
  </pre>
  <p>
    Blockquotes can be nested (i.e. a blockquote-in-a-blockquote) by
adding additional levels of
    <code>
      &gt;
    </code>
    :
  </p>
  <pre>
    <code>
      &gt; This is the first level of quoting.
&gt;
&gt; &gt; This is nested blockquote.
&gt;
&gt; Back to the first level.
    </code>
  </pre>
  <p>
    Blockquotes can contain other Markdown elements, including headers, lists,
and code blocks:
  </p>
  <pre>
    <code>
      &gt; ## This is a header.
&gt;
&gt; 1.   This is the first list item.
&gt; 2.   This is the second list item.
&gt;
&gt; Here's some example code:
&gt;
&gt;     return shell_exec("echo $input | $markdown_script");
    </code>
  </pre>
  <p>
    Any decent text editor should make email-style quoting easy. For
example, with BBEdit, you can make a selection and choose Increase
Quote Level from the Text menu.
  </p>
  <h3 id="list">
    Lists
  </h3>
  <p>
    Markdown supports ordered (numbered) and unordered (bulleted) lists.
  </p>
  <p>
    Unordered lists use asterisks, pluses, and hyphens -- interchangably
-- as list markers:
  </p>
  <pre>
    <code>
      *   Red
*   Green
*   Blue
    </code>
  </pre>
  <p>
    is equivalent to:
  </p>
  <pre>
    <code>
      +   Red
+   Green
+   Blue
    </code>
  </pre>
  <p>
    and:
  </p>
  <pre>
    <code>
      -   Red
-   Green
-   Blue
    </code>
  </pre>
  <p>
    Ordered lists use numbers followed by periods:
  </p>
  <pre>
    <code>
      1.  Bird
2.  McHale
3.  Parish
    </code>
  </pre>
  <p>
    It's important to note that the actual numbers you use to mark the
list have no effect on the HTML output Markdown produces. The HTML
Markdown produces from the above list is:
  </p>
  <pre>
    <code>
      &lt;ol&gt;
&lt;li&gt;Bird&lt;/li&gt;
&lt;li&gt;McHale&lt;/li&gt;
&lt;li&gt;Parish&lt;/li&gt;
&lt;/ol&gt;
    </code>
  </pre>
  <p>
    If you instead wrote the list in Markdown like this:
  </p>
  <pre>
    <code>
      1.  Bird
1.  McHale
1.  Parish
    </code>
  </pre>
  <p>
    or even:
  </p>
  <pre>
    <code>
      3. Bird
1. McHale
8. Parish
    </code>
  </pre>
  <p>
    you'd get the exact same HTML output. The point is, if you want to,
you can use ordinal numbers in your ordered Markdown lists, so that
the numbers in your source match the numbers in your published HTML.
But if you want to be lazy, you don't have to.
  </p>
  <p>
    If you do use lazy list numbering, however, you should still start the
list with the number 1. At some point in the future, Markdown may support
starting ordered lists at an arbitrary number.
  </p>
  <p>
    List markers typically start at the left margin, but may be indented by
up to three spaces. List markers must be followed by one or more spaces
or a tab.
  </p>
  <p>
    To make lists look nice, you can wrap items with hanging indents:
  </p>
  <pre>
    <code>
      *   Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    Aliquam hendrerit mi posuere lectus. Vestibulum enim wisi,
    viverra nec, fringilla in, laoreet vitae, risus.
*   Donec sit amet nisl. Aliquam semper ipsum sit amet velit.
    Suspendisse id sem consectetuer libero luctus adipiscing.
    </code>
  </pre>
  <p>
    But if you want to be lazy, you don't have to:
  </p>
  <pre>
    <code>
      *   Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
Aliquam hendrerit mi posuere lectus. Vestibulum enim wisi,
viverra nec, fringilla in, laoreet vitae, risus.
*   Donec sit amet nisl. Aliquam semper ipsum sit amet velit.
Suspendisse id sem consectetuer libero luctus adipiscing.
    </code>
  </pre>
  <p>
    If list items are separated by blank lines, Markdown will wrap the
items in
    <code>
      &lt;p&gt;
    </code>
    tags in the HTML output. For example, this input:
  </p>
  <pre>
    <code>
      *   Bird
*   Magic
    </code>
  </pre>
  <p>
    will turn into:
  </p>
  <pre>
    <code>
      &lt;ul&gt;
&lt;li&gt;Bird&lt;/li&gt;
&lt;li&gt;Magic&lt;/li&gt;
&lt;/ul&gt;
    </code>
  </pre>
  <p>
    But this:
  </p>
  <pre>
    <code>
      *   Bird

*   Magic
    </code>
  </pre>
  <p>
    will turn into:
  </p>
  <pre>
    <code>
      &lt;ul&gt;
&lt;li&gt;&lt;p&gt;Bird&lt;/p&gt;&lt;/li&gt;
&lt;li&gt;&lt;p&gt;Magic&lt;/p&gt;&lt;/li&gt;
&lt;/ul&gt;
    </code>
  </pre>
  <p>
    List items may consist of multiple paragraphs. Each subsequent
paragraph in a list item must be indented by either 4 spaces
or one tab:
  </p>
  <pre>
    <code>
      1.  This is a list item with two paragraphs. Lorem ipsum dolor
    sit amet, consectetuer adipiscing elit. Aliquam hendrerit
    mi posuere lectus.

    Vestibulum enim wisi, viverra nec, fringilla in, laoreet
    vitae, risus. Donec sit amet nisl. Aliquam semper ipsum
    sit amet velit.

2.  Suspendisse id sem consectetuer libero luctus adipiscing.
    </code>
  </pre>
  <p>
    It looks nice if you indent every line of the subsequent
paragraphs, but here again, Markdown will allow you to be
lazy:
  </p>
  <pre>
    <code>
      *   This is a list item with two paragraphs.

    This is the second paragraph in the list item. You're
only required to indent the first line. Lorem ipsum dolor
sit amet, consectetuer adipiscing elit.

*   Another item in the same list.
    </code>
  </pre>
  <p>
    To put a blockquote within a list item, the blockquote's
    <code>
      &gt;
    </code>
    delimiters need to be indented:
  </p>
  <pre>
    <code>
      *   A list item with a blockquote:

    &gt; This is a blockquote
    &gt; inside a list item.
    </code>
  </pre>
  <p>
    To put a code block within a list item, the code block needs
to be indented
    <em>
      twice
    </em>
    -- 8 spaces or two tabs:
  </p>
  <pre>
    <code>
      *   A list item with a code block:

        &lt;code goes here&gt;
    </code>
  </pre>
  <p>
    It's worth noting that it's possible to trigger an ordered list by
accident, by writing something like this:
  </p>
  <pre>
    <code>
      1986. What a great season.
    </code>
  </pre>
  <p>
    In other words, a
    <em>
      number-period-space
    </em>
    sequence at the beginning of a
line. To avoid this, you can backslash-escape the period:
  </p>
  <pre>
    <code>
      1986\\. What a great season.
    </code>
  </pre>
  <h3 id="precode">
    Code Blocks
  </h3>
  <p>
    Pre-formatted code blocks are used for writing about programming or
markup source code. Rather than forming normal paragraphs, the lines
of a code block are interpreted literally. Markdown wraps a code block
in both
    <code>
      &lt;pre&gt;
    </code>
    and
    <code>
      &lt;code&gt;
    </code>
    tags.
  </p>
  <p>
    To produce a code block in Markdown, simply indent every line of the
block by at least 4 spaces or 1 tab. For example, given this input:
  </p>
  <pre>
    <code>
      This is a normal paragraph:

    This is a code block.
    </code>
  </pre>
  <p>
    Markdown will generate:
  </p>
  <pre>
    <code>
      &lt;p&gt;This is a normal paragraph:&lt;/p&gt;

&lt;pre&gt;&lt;code&gt;This is a code block.
&lt;/code&gt;&lt;/pre&gt;
    </code>
  </pre>
  <p>
    One level of indentation -- 4 spaces or 1 tab -- is removed from each
line of the code block. For example, this:
  </p>
  <pre>
    <code>
      Here is an example of AppleScript:

    tell application "Foo"
        beep
    end tell
    </code>
  </pre>
  <p>
    will turn into:
  </p>
  <pre>
    <code>
      &lt;p&gt;Here is an example of AppleScript:&lt;/p&gt;

&lt;pre&gt;&lt;code&gt;tell application "Foo"
    beep
end tell
&lt;/code&gt;&lt;/pre&gt;
    </code>
  </pre>
  <p>
    A code block continues until it reaches a line that is not indented
(or the end of the article).
  </p>
  <p>
    Within a code block, ampersands (
    <code>
      &amp;
    </code>
    ) and angle brackets (
    <code>
      &lt;
    </code>
    and
    <code>
      &gt;
    </code>
    )
are automatically converted into HTML entities. This makes it very
easy to include example HTML source code using Markdown -- just paste
it and indent it, and Markdown will handle the hassle of encoding the
ampersands and angle brackets. For example, this:
  </p>
  <pre>
    <code>
      &lt;div class="footer"&gt;
        &amp;copy; 2004 Foo Corporation
    &lt;/div&gt;
    </code>
  </pre>
  <p>
    will turn into:
  </p>
  <pre>
    <code>
      &lt;pre&gt;&lt;code&gt;&amp;lt;div class="footer"&amp;gt;
    &amp;amp;copy; 2004 Foo Corporation
&amp;lt;/div&amp;gt;
&lt;/code&gt;&lt;/pre&gt;
    </code>
  </pre>
  <p>
    Regular Markdown syntax is not processed within code blocks. E.g.,
asterisks are just literal asterisks within a code block. This means
it's also easy to use Markdown to write about Markdown's own syntax.
  </p>
  <h3 id="hr">
    Horizontal Rules
  </h3>
  <p>
    You can produce a horizontal rule tag (
    <code>
      &lt;hr /&gt;
    </code>
    ) by placing three or
more hyphens, asterisks, or underscores on a line by themselves. If you
wish, you may use spaces between the hyphens or asterisks. Each of the
following lines will produce a horizontal rule:
  </p>
  <pre>
    <code>
      * * *

***

*****

- - -

---------------------------------------
    </code>
  </pre>
  <hr>
  <h2 id="span">
    Span Elements
  </h2>
  <h3 id="link">
    Links
  </h3>
  <p>
    Markdown supports two style of links:
    <em>
      inline
    </em>
    and
    <em>
      reference
    </em>
    .
  </p>
  <p>
    In both styles, the link text is delimited by [square brackets].
  </p>
  <p>
    To create an inline link, use a set of regular parentheses immediately
after the link text's closing square bracket. Inside the parentheses,
put the URL where you want the link to point, along with an
    <em>
      optional
    </em>
    title for the link, surrounded in quotes. For example:
  </p>
  <pre>
    <code>
      This is [an example](http://example.com/ "Title") inline link.

[This link](http://example.net/) has no title attribute.
    </code>
  </pre>
  <p>
    Will produce:
  </p>
  <pre>
    <code>
      &lt;p&gt;This is &lt;a href="http://example.com/" title="Title"&gt;
an example&lt;/a&gt; inline link.&lt;/p&gt;

&lt;p&gt;&lt;a href="http://example.net/"&gt;This link&lt;/a&gt; has no
title attribute.&lt;/p&gt;
    </code>
  </pre>
  <p>
    If you're referring to a local resource on the same server, you can
use relative paths:
  </p>
  <pre>
    <code>
      See my [About](/about/) page for details.
    </code>
  </pre>
  <p>
    Reference-style links use a second set of square brackets, inside
which you place a label of your choosing to identify the link:
  </p>
  <pre>
    <code>
      This is [an example][id] reference-style link.
    </code>
  </pre>
  <p>
    You can optionally use a space to separate the sets of brackets:
  </p>
  <pre>
    <code>
      This is [an example] [id] reference-style link.
    </code>
  </pre>
  <p>
    Then, anywhere in the document, you define your link label like this,
on a line by itself:
  </p>
  <pre>
    <code>
      [id]: http://example.com/  "Optional Title Here"
    </code>
  </pre>
  <p>
    That is:
  </p>
  <ul>
    <li>
      Square brackets containing the link identifier (optionally
indented from the left margin using up to three spaces);
    </li>
    <li>
      followed by a colon;
    </li>
    <li>
      followed by one or more spaces (or tabs);
    </li>
    <li>
      followed by the URL for the link;
    </li>
    <li>
      optionally followed by a title attribute for the link, enclosed
in double or single quotes, or enclosed in parentheses.
    </li>
  </ul>
  <p>
    The following three link definitions are equivalent:
  </p>
  <pre>
    <code>
      [foo]: http://example.com/  "Optional Title Here"
[foo]: http://example.com/  'Optional Title Here'
[foo]: http://example.com/  (Optional Title Here)
    </code>
  </pre>
  <p>
    <strong>
      Note:
    </strong>
    There is a known bug in Markdown.pl 1.0.1 which prevents
single quotes from being used to delimit link titles.
  </p>
  <p>
    The link URL may, optionally, be surrounded by angle brackets:
  </p>
  <pre>
    <code>
      [id]: &lt;http://example.com/&gt;  "Optional Title Here"
    </code>
  </pre>
  <p>
    You can put the title attribute on the next line and use extra spaces
or tabs for padding, which tends to look better with longer URLs:
  </p>
  <pre>
    <code>
      [id]: http://example.com/longish/path/to/resource/here
    "Optional Title Here"
    </code>
  </pre>
  <p>
    Link definitions are only used for creating links during Markdown
processing, and are stripped from your document in the HTML output.
  </p>
  <p>
    Link definition names may consist of letters, numbers, spaces, and
punctuation -- but they are
    <em>
      not
    </em>
    case sensitive. E.g. these two
links:
  </p>
  <pre>
    <code>
      [link text][a]
[link text][A]
    </code>
  </pre>
  <p>
    are equivalent.
  </p>
  <p>
    The
    <em>
      implicit link name
    </em>
    shortcut allows you to omit the name of the
link, in which case the link text itself is used as the name.
Just use an empty set of square brackets -- e.g., to link the word
"Google" to the google.com web site, you could simply write:
  </p>
  <pre>
    <code>
      [Google][]
    </code>
  </pre>
  <p>
    And then define the link:
  </p>
  <pre>
    <code>
      [Google]: http://google.com/
    </code>
  </pre>
  <p>
    Because link names may contain spaces, this shortcut even works for
multiple words in the link text:
  </p>
  <pre>
    <code>
      Visit [Daring Fireball][] for more information.
    </code>
  </pre>
  <p>
    And then define the link:
  </p>
  <pre>
    <code>
      [Daring Fireball]: http://daringfireball.net/
    </code>
  </pre>
  <p>
    Link definitions can be placed anywhere in your Markdown document. I
tend to put them immediately after each paragraph in which they're
used, but if you want, you can put them all at the end of your
document, sort of like footnotes.
  </p>
  <p>
    Here's an example of reference links in action:
  </p>
  <pre>
    <code>
      I get 10 times more traffic from [Google] [1] than from
[Yahoo] [2] or [MSN] [3].

  [1]: http://google.com/        "Google"
  [2]: http://search.yahoo.com/  "Yahoo Search"
  [3]: http://search.msn.com/    "MSN Search"
    </code>
  </pre>
  <p>
    Using the implicit link name shortcut, you could instead write:
  </p>
  <pre>
    <code>
      I get 10 times more traffic from [Google][] than from
[Yahoo][] or [MSN][].

  [google]: http://google.com/        "Google"
  [yahoo]:  http://search.yahoo.com/  "Yahoo Search"
  [msn]:    http://search.msn.com/    "MSN Search"
    </code>
  </pre>
  <p>
    Both of the above examples will produce the following HTML output:
  </p>
  <pre>
    <code>
      &lt;p&gt;I get 10 times more traffic from &lt;a href="http://google.com/"
title="Google"&gt;Google&lt;/a&gt; than from
&lt;a href="http://search.yahoo.com/" title="Yahoo Search"&gt;Yahoo&lt;/a&gt;
or &lt;a href="http://search.msn.com/" title="MSN Search"&gt;MSN&lt;/a&gt;.&lt;/p&gt;
    </code>
  </pre>
  <p>
    For comparison, here is the same paragraph written using
Markdown's inline link style:
  </p>
  <pre>
    <code>
      I get 10 times more traffic from [Google](http://google.com/ "Google")
than from [Yahoo](http://search.yahoo.com/ "Yahoo Search") or
[MSN](http://search.msn.com/ "MSN Search").
    </code>
  </pre>
  <p>
    The point of reference-style links is not that they're easier to
write. The point is that with reference-style links, your document
source is vastly more readable. Compare the above examples: using
reference-style links, the paragraph itself is only 81 characters
long; with inline-style links, it's 176 characters; and as raw HTML,
it's 234 characters. In the raw HTML, there's more markup than there
is text.
  </p>
  <p>
    With Markdown's reference-style links, a source document much more
closely resembles the final output, as rendered in a browser. By
allowing you to move the markup-related metadata out of the paragraph,
you can add links without interrupting the narrative flow of your
prose.
  </p>
  <h3 id="em">
    Emphasis
  </h3>
  <p>
    Markdown treats asterisks (
    <code>
      *
    </code>
    ) and underscores (
    <code>
      _
    </code>
    ) as indicators of
emphasis. Text wrapped with one
    <code>
      *
    </code>
    or
    <code>
      _
    </code>
    will be wrapped with an
HTML
    <code>
      &lt;em&gt;
    </code>
    tag; double
    <code>
      *
    </code>
    's or
    <code>
      _
    </code>
    's will be wrapped with an HTML
    <code>
      &lt;strong&gt;
    </code>
    tag. E.g., this input:
  </p>
  <pre>
    <code>
      *single asterisks*

_single underscores_

**double asterisks**

__double underscores__
    </code>
  </pre>
  <p>
    will produce:
  </p>
  <pre>
    <code>
      &lt;em&gt;single asterisks&lt;/em&gt;

&lt;em&gt;single underscores&lt;/em&gt;

&lt;strong&gt;double asterisks&lt;/strong&gt;

&lt;strong&gt;double underscores&lt;/strong&gt;
    </code>
  </pre>
  <p>
    You can use whichever style you prefer; the lone restriction is that
the same character must be used to open and close an emphasis span.
  </p>
  <p>
    Emphasis can be used in the middle of a word:
  </p>
  <pre>
    <code>
      un*frigging*believable
    </code>
  </pre>
  <p>
    But if you surround an
    <code>
      *
    </code>
    or
    <code>
      _
    </code>
    with spaces, it'll be treated as a
literal asterisk or underscore.
  </p>
  <p>
    To produce a literal asterisk or underscore at a position where it
would otherwise be used as an emphasis delimiter, you can backslash
escape it:
  </p>
  <pre>
    <code>
      \\*this text is surrounded by literal asterisks\\*
    </code>
  </pre>
  <h3 id="code">
    Code
  </h3>
  <p>
    To indicate a span of code, wrap it with backtick quotes (
    <code>
      \`
    </code>
    ).
Unlike a pre-formatted code block, a code span indicates code within a
normal paragraph. For example:
  </p>
  <pre>
    <code>
      Use the \`printf()\` function.
    </code>
  </pre>
  <p>
    will produce:
  </p>
  <pre>
    <code>
      &lt;p&gt;Use the &lt;code&gt;printf()&lt;/code&gt; function.&lt;/p&gt;
    </code>
  </pre>
  <p>
    To include a literal backtick character within a code span, you can use
multiple backticks as the opening and closing delimiters:
  </p>
  <pre>
    <code>
      \`\`There is a literal backtick (\`) here.\`\`
    </code>
  </pre>
  <p>
    which will produce this:
  </p>
  <pre>
    <code>
      &lt;p&gt;&lt;code&gt;There is a literal backtick (\`) here.&lt;/code&gt;&lt;/p&gt;
    </code>
  </pre>
  <p>
    The backtick delimiters surrounding a code span may include spaces --
one after the opening, one before the closing. This allows you to place
literal backtick characters at the beginning or end of a code span:
  </p>
  <pre>
    <code>
      A single backtick in a code span: \`\` \` \`\`

A backtick-delimited string in a code span: \`\` \`foo\` \`\`
    </code>
  </pre>
  <p>
    will produce:
  </p>
  <pre>
    <code>
      &lt;p&gt;A single backtick in a code span: &lt;code&gt;\`&lt;/code&gt;&lt;/p&gt;

&lt;p&gt;A backtick-delimited string in a code span: &lt;code&gt;\`foo\`&lt;/code&gt;&lt;/p&gt;
    </code>
  </pre>
  <p>
    With a code span, ampersands and angle brackets are encoded as HTML
entities automatically, which makes it easy to include example HTML
tags. Markdown will turn this:
  </p>
  <pre>
    <code>
      Please don't use any \`&lt;blink&gt;\` tags.
    </code>
  </pre>
  <p>
    into:
  </p>
  <pre>
    <code>
      &lt;p&gt;Please don't use any &lt;code&gt;&amp;lt;blink&amp;gt;&lt;/code&gt; tags.&lt;/p&gt;
    </code>
  </pre>
  <p>
    You can write this:
  </p>
  <pre>
    <code>
      \`&amp;#8212;\` is the decimal-encoded equivalent of \`&amp;mdash;\`.
    </code>
  </pre>
  <p>
    to produce:
  </p>
  <pre>
    <code>
      &lt;p&gt;&lt;code&gt;&amp;amp;#8212;&lt;/code&gt; is the decimal-encoded
equivalent of &lt;code&gt;&amp;amp;mdash;&lt;/code&gt;.&lt;/p&gt;
    </code>
  </pre>
  <h3 id="img">
    Images
  </h3>
  <p>
    Admittedly, it's fairly difficult to devise a "natural" syntax for
placing images into a plain text document format.
  </p>
  <p>
    Markdown uses an image syntax that is intended to resemble the syntax
for links, allowing for two styles:
    <em>
      inline
    </em>
    and
    <em>
      reference
    </em>
    .
  </p>
  <p>
    Inline image syntax looks like this:
  </p>
  <pre>
    <code>
      ![Alt text](/path/to/img.jpg)

![Alt text](/path/to/img.jpg "Optional title")
    </code>
  </pre>
  <p>
    That is:
  </p>
  <ul>
    <li>
      An exclamation mark:
      <code>
        !
      </code>
      ;
    </li>
    <li>
      followed by a set of square brackets, containing the
      <code>
        alt
      </code>
      attribute text for the image;
    </li>
    <li>
      followed by a set of parentheses, containing the URL or path to
the image, and an optional
      <code>
        title
      </code>
      attribute enclosed in double
or single quotes.
    </li>
  </ul>
  <p>
    Reference-style image syntax looks like this:
  </p>
  <pre>
    <code>
      ![Alt text][id]
    </code>
  </pre>
  <p>
    Where "id" is the name of a defined image reference. Image references
are defined using syntax identical to link references:
  </p>
  <pre>
    <code>
      [id]: url/to/image  "Optional title attribute"
    </code>
  </pre>
  <p>
    As of this writing, Markdown has no syntax for specifying the
dimensions of an image; if this is important to you, you can simply
use regular HTML
    <code>
      &lt;img&gt;
    </code>
    tags.
  </p>
  <hr>
  <h2 id="misc">
    Miscellaneous
  </h2>
  <h3 id="autolink">
    Automatic Links
  </h3>
  <p>
    Markdown supports a shortcut style for creating "automatic" links for URLs and email addresses: simply surround the URL or email address with angle brackets. What this means is that if you want to show the actual text of a URL or email address, and also have it be a clickable link, you can do this:
  </p>
  <pre>
    <code>
      &lt;http://example.com/&gt;
    </code>
  </pre>
  <p>
    Markdown will turn this into:
  </p>
  <pre>
    <code>
      &lt;a href="http://example.com/"&gt;http://example.com/&lt;/a&gt;
    </code>
  </pre>
  <p>
    Automatic links for email addresses work similarly, except that
Markdown will also perform a bit of randomized decimal and hex
entity-encoding to help obscure your address from address-harvesting
spambots. For example, Markdown will turn this:
  </p>
  <pre>
    <code>
      &lt;address@example.com&gt;
    </code>
  </pre>
  <p>
    into something like this:
  </p>
  <pre>
    <code>
      &lt;a href="&amp;#x6D;&amp;#x61;i&amp;#x6C;&amp;#x74;&amp;#x6F;:&amp;#x61;&amp;#x64;&amp;#x64;&amp;#x72;&amp;#x65;
&amp;#115;&amp;#115;&amp;#64;&amp;#101;&amp;#120;&amp;#x61;&amp;#109;&amp;#x70;&amp;#x6C;e&amp;#x2E;&amp;#99;&amp;#111;
&amp;#109;"&gt;&amp;#x61;&amp;#x64;&amp;#x64;&amp;#x72;&amp;#x65;&amp;#115;&amp;#115;&amp;#64;&amp;#101;&amp;#120;&amp;#x61;
&amp;#109;&amp;#x70;&amp;#x6C;e&amp;#x2E;&amp;#99;&amp;#111;&amp;#109;&lt;/a&gt;
    </code>
  </pre>
  <p>
    which will render in a browser as a clickable link to "address@example.com".
  </p>
  <p>
    (This sort of entity-encoding trick will indeed fool many, if not
most, address-harvesting bots, but it definitely won't fool all of
them. It's better than nothing, but an address published in this way
will probably eventually start receiving spam.)
  </p>
  <h3 id="backslash">
    Backslash Escapes
  </h3>
  <p>
    Markdown allows you to use backslash escapes to generate literal
characters which would otherwise have special meaning in Markdown's
formatting syntax. For example, if you wanted to surround a word
with literal asterisks (instead of an HTML
    <code>
      &lt;em&gt;
    </code>
    tag), you can use
backslashes before the asterisks, like this:
  </p>
  <pre>
    <code>
      \\*literal asterisks\\*
    </code>
  </pre>
  <p>
    Markdown provides backslash escapes for the following characters:
  </p>
  <pre>
    <code>
      \\   backslash
\`   backtick
*   asterisk
_   underscore
{}  curly braces
[]  square brackets
()  parentheses
#   hash mark
+    plus sign
-    minus sign (hyphen)
.   dot
!   exclamation mark
    </code>
  </pre>
</div>

`;

exports[`markdown-to-jsx compiler headings adds an "id" attribute to headings for deeplinking purposes 1`] = `

<h1 data-reactroot
    id="this-is-a-very-complicated-header"
>
  This is~ a very' complicated&gt; header!
</h1>

`;

exports[`markdown-to-jsx compiler headings should handle consecutive headings without a padding newline 1`] = `

<div data-reactroot>
  <h1 id="hello-world">
    Hello World
  </h1>
  <h2 id="and-again">
    And again
  </h2>
</div>

`;

exports[`markdown-to-jsx compiler headings should handle level 1 properly 1`] = `

<h1 data-reactroot
    id="hello-world"
>
  Hello World
</h1>

`;

exports[`markdown-to-jsx compiler headings should handle level 2 properly 1`] = `

<h2 data-reactroot
    id="hello-world"
>
  Hello World
</h2>

`;

exports[`markdown-to-jsx compiler headings should handle level 3 properly 1`] = `

<h3 data-reactroot
    id="hello-world"
>
  Hello World
</h3>

`;

exports[`markdown-to-jsx compiler headings should handle level 4 properly 1`] = `

<h4 data-reactroot
    id="hello-world"
>
  Hello World
</h4>

`;

exports[`markdown-to-jsx compiler headings should handle level 5 properly 1`] = `

<h5 data-reactroot
    id="hello-world"
>
  Hello World
</h5>

`;

exports[`markdown-to-jsx compiler headings should handle level 6 properly 1`] = `

<h6 data-reactroot
    id="hello-world"
>
  Hello World
</h6>

`;

exports[`markdown-to-jsx compiler headings should handle setext level 1 style 1`] = `

<div data-reactroot>
  <h1>
    Hello World
  </h1>
  <p>
    something
  </p>
</div>

`;

exports[`markdown-to-jsx compiler headings should handle setext level 2 style 1`] = `

<div data-reactroot>
  <h2>
    Hello World
  </h2>
  <p>
    something
  </p>
</div>

`;

exports[`markdown-to-jsx compiler horizontal rules should handle the various syntaxes 1`] = `

<div data-reactroot>
  <hr>
  <hr>
  <hr>
  <hr>
  <hr>
</div>

`;

exports[`markdown-to-jsx compiler images should handle a basic image 1`] = `

<img data-reactroot
     src="/xyz.png"
>

`;

exports[`markdown-to-jsx compiler images should handle an image reference 1`] = `

<p data-reactroot>
  <img src="/xyz.png">
</p>

`;

exports[`markdown-to-jsx compiler images should handle an image reference with alt text 1`] = `

<p data-reactroot>
  <img alt="test"
       src="/xyz.png"
  >
</p>

`;

exports[`markdown-to-jsx compiler images should handle an image reference with title 1`] = `

<p data-reactroot>
  <img alt="test"
       src="/xyz.png"
       title="foo"
  >
</p>

`;

exports[`markdown-to-jsx compiler images should handle an image with alt text 1`] = `

<img data-reactroot
     alt="test"
     src="/xyz.png"
>

`;

exports[`markdown-to-jsx compiler images should handle an image with title 1`] = `

<img data-reactroot
     alt="test"
     title="foo"
     src="/xyz.png"
>

`;

exports[`markdown-to-jsx compiler indented code blocks should be handled 1`] = `

<pre data-reactroot>
  <code>
    foo
  </code>
</pre>

`;

exports[`markdown-to-jsx compiler inline code blocks should be handled 1`] = `

<code data-reactroot>
  foo
</code>

`;

exports[`markdown-to-jsx compiler inline textual elements ignore similar syntax inside inline syntax 1`] = `

<em data-reactroot>
  This should not misinterpret the asterisk
  <span>
    *
  </span>
  in the HTML.
</em>

`;

exports[`markdown-to-jsx compiler inline textual elements ignore similar syntax inside inline syntax 2`] = `

<em data-reactroot>
  This should not misinterpret the asterisk
  <a href="x">
    *
  </a>
  in the anchor text.
</em>

`;

exports[`markdown-to-jsx compiler inline textual elements ignore similar syntax inside inline syntax 3`] = `

<em data-reactroot>
  This should not misinterpret the asterisk
  <a href="x*">
    foo
  </a>
  in the link href.
</em>

`;

exports[`markdown-to-jsx compiler inline textual elements ignore similar syntax inside inline syntax 4`] = `

<em data-reactroot>
  This should not misinterpret the asterisk
  <del>
    *
  </del>
  in the strikethrough.
</em>

`;

exports[`markdown-to-jsx compiler inline textual elements ignore similar syntax inside inline syntax 5`] = `

<em data-reactroot>
  This should not misinterpret the asterisk
  <code>
    *
  </code>
  in the backticks.
</em>

`;

exports[`markdown-to-jsx compiler inline textual elements regression test for #188, mismatched syntaxes triggered the wrong result 1`] = `

<span data-reactroot>
  *This should render as normal text, not emphasized._
</span>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle block deleted text containing other syntax with a tilde 1`] = `

<div data-reactroot>
  <p>
    <del>
      Foo
      <code>
        ~~bar
      </code>
      baz.
    </del>
  </p>
  <p>
    Foo
    <del>
      bar
    </del>
    .
  </p>
</div>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle deleted text 1`] = `

<del data-reactroot>
  Hello.
</del>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle deleted text containing other syntax with a tilde 1`] = `

<del data-reactroot>
  Foo
  <code>
    ~~bar
  </code>
  baz.
</del>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle double-emphasized text 1`] = `

<strong data-reactroot>
  Hello.
</strong>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle emphasized text 1`] = `

<em data-reactroot>
  Hello.
</em>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle escaped text 1`] = `

<span data-reactroot>
  Hello.__foo__
</span>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle the alternate form of bold/italic 1`] = `

<strong data-reactroot>
  <em>
    Hello.
  </em>
</strong>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle triple-emphasized text 1`] = `

<strong data-reactroot>
  <em>
    Hello.
  </em>
</strong>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle triple-emphasized text with mixed syntax 1/2 1`] = `

<strong data-reactroot>
  <em>
    Hello.
  </em>
</strong>

`;

exports[`markdown-to-jsx compiler inline textual elements should handle triple-emphasized text with mixed syntax 2/2 1`] = `

<em data-reactroot>
  <strong>
    Hello.
  </strong>
</em>

`;

exports[`markdown-to-jsx compiler links regression test for #188, link inside underscore bolding with underscore 1`] = `

<strong data-reactroot>
  This is emphasized text with
  <a href="https://example.com/asdf__asdf.pdf">
    a link
  </a>
  , and another
  <a href="https://example.com">
    link
  </a>
  .
</strong>

`;

exports[`markdown-to-jsx compiler links regression test for #188, link inside underscore emphasis with underscore 1`] = `

<em data-reactroot>
  This is emphasized text with
  <a href="https://example.com/asdf_asdf.pdf">
    a link
  </a>
  , and another
  <a href="https://example.com">
    link
  </a>
  .
</em>

`;

exports[`markdown-to-jsx compiler links should an email autolink and add a mailto: prefix 1`] = `

<a data-reactroot
   href="mailto:probablyup@gmail.com"
>
  probablyup@gmail.com
</a>

`;

exports[`markdown-to-jsx compiler links should automatically link found URLs 1`] = `

<a data-reactroot
   href="https://google.com"
>
  https://google.com
</a>

`;

exports[`markdown-to-jsx compiler links should handle a basic link 1`] = `

<a data-reactroot
   href="/xyz.png"
>
  foo
</a>

`;

exports[`markdown-to-jsx compiler links should handle a link reference 1`] = `

<p data-reactroot>
  <a href="/xyz.png">
    foo
  </a>
</p>

`;

exports[`markdown-to-jsx compiler links should handle a link reference with a space 1`] = `

<p data-reactroot>
  <a href="/xyz.png">
    foo
  </a>
</p>

`;

exports[`markdown-to-jsx compiler links should handle a link reference with title 1`] = `

<p data-reactroot>
  <a href="/xyz.png"
     title="bar"
  >
    foo
  </a>
</p>

`;

exports[`markdown-to-jsx compiler links should handle a link with a URL in the text 1`] = `

<a data-reactroot
   href="http://www.google.com"
>
  https://www.google.com
  <em>
    heck yeah
  </em>
</a>

`;

exports[`markdown-to-jsx compiler links should handle a link with title 1`] = `

<a data-reactroot
   href="/xyz.png"
   title="bar"
>
  foo
</a>

`;

exports[`markdown-to-jsx compiler links should handle a mailto autolink 1`] = `

<a data-reactroot
   href="mailto:probablyup@gmail.com"
>
  probablyup@gmail.com
</a>

`;

exports[`markdown-to-jsx compiler links should handle autolink style 1`] = `

<a data-reactroot
   href="https://google.com"
>
  https://google.com
</a>

`;

exports[`markdown-to-jsx compiler links should handle autolinks after a paragraph (regression) 1`] = `

<div data-reactroot>
  <p>
    <strong>
      autolink
    </strong>
    style
  </p>
  <p>
    <a href="https://google.com">
      https://google.com
    </a>
  </p>
</div>

`;

exports[`markdown-to-jsx compiler links should handle mailto autolinks after a paragraph 1`] = `

<div data-reactroot>
  <p>
    <strong>
      autolink
    </strong>
    style
  </p>
  <p>
    <a href="mailto:probablyup@gmail.com">
      probablyup@gmail.com
    </a>
  </p>
</div>

`;

exports[`markdown-to-jsx compiler links should sanitize links containing JS expressions 1`] = `

<a data-reactroot>
  foo
</a>

`;

exports[`markdown-to-jsx compiler links should sanitize links containing invalid characters 1`] = `

<a data-reactroot>
  foo
</a>

`;

exports[`markdown-to-jsx compiler lists should handle a loose list 1`] = `

<ul data-reactroot>
  <li>
    <p>
      xyz
    </p>
  </li>
  <li>
    <p>
      abc
    </p>
  </li>
  <li>
    <p>
      foo
    </p>
  </li>
</ul>

`;

exports[`markdown-to-jsx compiler lists should handle a mixed nested list 1`] = `

<ul data-reactroot>
  <li>
    xyz
    <ol start="1">
      <li>
        abc
        <ul>
          <li>
            def
          </li>
        </ul>
      </li>
    </ol>
  </li>
  <li>
    foo
  </li>
</ul>

`;

exports[`markdown-to-jsx compiler lists should handle a nested list 1`] = `

<ul data-reactroot>
  <li>
    xyz
    <ul>
      <li>
        abc
      </li>
    </ul>
  </li>
  <li>
    foo
  </li>
</ul>

`;

exports[`markdown-to-jsx compiler lists should handle a tight list 1`] = `

<ul data-reactroot>
  <li>
    xyz
  </li>
  <li>
    abc
  </li>
  <li>
    foo
  </li>
</ul>

`;

exports[`markdown-to-jsx compiler lists should handle an ordered list 1`] = `

<ol data-reactroot
    start="1"
>
  <li>
    xyz
  </li>
  <li>
    abc
  </li>
  <li>
    foo
  </li>
</ol>

`;

exports[`markdown-to-jsx compiler lists should handle an ordered list with a specific start index 1`] = `

<ol data-reactroot
    start="2"
>
  <li>
    xyz
  </li>
  <li>
    abc
  </li>
  <li>
    foo
  </li>
</ol>

`;

exports[`markdown-to-jsx compiler lists should handle link trees 1`] = `

<ul data-reactroot>
  <li>
    <a href="#buttermilk">
      buttermilk
    </a>
    <ul>
      <li>
        <a href="#installation">
          installation
        </a>
      </li>
      <li>
        <a href="#usage">
          usage
        </a>
        <ul>
          <li>
            <a href="#configuration">
              configuration
            </a>
          </li>
          <li>
            <a href="#components">
              components
            </a>
            <ul>
              <li>
                <a href="#router">
                  <code>
                    &lt;Router&gt;
                  </code>
                </a>
              </li>
              <li>
                <a href="#routingstate">
                  <code>
                    &lt;RoutingState&gt;
                  </code>
                </a>
              </li>
              <li>
                <a href="#link">
                  <code>
                    &lt;Link&gt;
                  </code>
                </a>
              </li>
            </ul>
          </li>
          <li>
            <a href="#utilities">
              utilities
            </a>
            <ul>
              <li>
                <a href="#routeurl-string-addnewhistoryentry-boolean--true">
                  <code>
                    route(url: String, addNewHistoryEntry: Boolean = true)
                  </code>
                </a>
              </li>
            </ul>
          </li>
          <li>
            <a href="#holistic-example">
              holistic example
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a href="#goals">
          goals
        </a>
      </li>
    </ul>
  </li>
</ul>

`;

exports[`markdown-to-jsx compiler lists should not add an extra wrapper around a list 1`] = `

<ul data-reactroot>
  <li>
    xyz
    <ol start="1">
      <li>
        abc
        <ul>
          <li>
            def
          </li>
        </ul>
      </li>
    </ol>
  </li>
  <li>
    foo
  </li>
</ul>

`;

exports[`markdown-to-jsx compiler misc block level elements should handle blockquotes 1`] = `

<blockquote data-reactroot>
  <p>
    Something important, perhaps?
  </p>
</blockquote>

`;

exports[`markdown-to-jsx compiler options.forceBlock treats given markdown as block-context 1`] = `

<p data-reactroot>
  Hello.
  <em>
    Beautiful
  </em>
  day isn't it?
</p>

`;

exports[`markdown-to-jsx compiler options.forceInline treats given markdown as inline-context, passing through any block-level markdown syntax 1`] = `

<span data-reactroot>
  # You got it babe!
</span>

`;

exports[`markdown-to-jsx compiler options.slugify should use a custom slugify function rather than the default if set and valid 1`] = `

<h1 data-reactroot
    id="中文"
>
  中文
</h1>

`;

exports[`markdown-to-jsx compiler options.slugify should use the default function if unset 1`] = `

<h1 data-reactroot
    id
>
  中文
</h1>

`;

exports[`markdown-to-jsx compiler overrides should add props to pre & code tags if supplied 1`] = `

<pre data-reactroot
     class="abc"
>
  <code data-foo="bar">
    foo
  </code>
</pre>

`;

exports[`markdown-to-jsx compiler overrides should be able to override gfm task list item checkboxes 1`] = `

<input type="checkbox"
       class="foo"
       readonly
       value="on"
>

`;

exports[`markdown-to-jsx compiler overrides should be able to override gfm task list items 1`] = `

<li class="foo">
  <input type="checkbox"
         readonly
         value="on"
  >
  foo
</li>

`;

exports[`markdown-to-jsx compiler overrides should substitute pre & code tags if supplied with an override component 1`] = `

<pre data-reactroot
     class="abc"
     data-bar="baz"
>
  <code data-foo="bar"
        data-baz="fizz"
  >
    foo
  </code>
</pre>

`;

exports[`markdown-to-jsx compiler wraps multiple block element returns in a div to avoid invalid nesting errors 1`] = `

<div data-reactroot>
  <h1 id="boop">
    Boop
  </h1>
  <h2 id="blep">
    Blep
  </h2>
</div>

`;

exports[`markdown-to-jsx compiler wraps solely inline elements in a span, rather than a div 1`] = `

<span data-reactroot>
  Hello.
  <em>
    Beautiful
  </em>
  day isn't it?
</span>

`;

exports[`markdown-to-jsx component accepts markdown content 1`] = `

<em data-reactroot>
  Hello.
</em>

`;

exports[`markdown-to-jsx component accepts options 1`] = `

<em data-reactroot>
  Hello.
</em>

`;

exports[`markdown-to-jsx component handles a no-children scenario 1`] = `

<span data-reactroot>
</span>

`;

exports[`markdown-to-jsx component merges className overrides, rather than overwriting 1`] = `

<pre data-reactroot>
  <code class="lang-js foo">
    foo
  </code>
</pre>

`;

exports[`markdown-to-jsx component passes along any additional props to the rendered wrapper element 1`] = `

<h1 data-reactroot
    id="hello"
    class="foo"
>
  Hello
</h1>

`;
